--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.7.1",
-    "eslint-plugin-jest": "^23.0.4",
+    "husky": "^4.2.0",
     "jest": "^24.9.0",
+    "prettier": "1.19.1",
+    "pretty-quick": "^2.0.1",
     "rollup": "^1.0.0",
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -27,5 +28,10 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
