Add prettier config

--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "semi": false
   }
 }
