--- a/package.json
+++ b/package.json
@@ -8,22 +8,24 @@
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "babel-jest": "^24.9.0",
+    "@rollup/plugin-typescript": "^2.1.0",
+    "@types/jest": "^24.9.1",
     "husky": "^4.2.0",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
     "rollup": "^1.0.0",
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0"
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "ts-jest": "^25.0.0",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "build": "npm run lint && npm test && rollup -c",
     "dev": "rollup -c -w",
-    "lint": "eslint --fix src test",
+    "lint": "prettier --write *.js src/**.js test/**.js",
     "test": "jest"
   },
   "files": [
