--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-typescript": "^2.1.0",
     "@types/jest": "^24.9.1",
-    "husky": "^4.2.0",
+    "husky": "^4.2.1",
     "jest": "^25.1.0",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
-    "rollup": "^1.0.0",
-    "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup": "^1.29.1",
     "ts-jest": "^25.0.0",
     "tslib": "^1.10.0",
     "typescript": "^3.7.5"
